# sckcpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/client/: CMakeLists.txt  main.cpp
example/server/: CMakeLists.txt  TcpServer.cpp  TcpServer.hpp  main.cpp
include/sckcpp/: BaseSocket.hpp  Buffer.hpp  IBaseSocket.hpp  SockAddress.hpp  Socket.hpp  SocketException.hpp  library.h  sckcpp.hpp  socketPlateform.hpp
include/sckcpp/unix/: BaseSocket.hpp  SockAddress.hpp  socketPlateform.hpp
include/sckcpp/win/: BaseSocket.hpp  SockAddress.hpp  socketPlateform.hpp
src/sckcpp/: BaseSocket.cpp  SockAddress.cpp  Socket.cpp  library.cpp
src/sckcpp/unix/: BaseSocket.cpp  SockAddress.cpp
src/sckcpp/win/: BaseSocket.cpp  SockAddress.cpp
tests/: CMakeLists.txt
